<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_size_key"
        android:title="@string/pref_size_title"
        android:summary="@string/pref_size_summary"
		android:dialogTitle="@string/pref_size_dialog_title"
		android:entries="@array/pref_size_options"
		android:entryValues="@array/pref_size_values"
		android:defaultValue="@string/pref_size_default_value" />
    
    <ListPreference
        android:key="@string/pref_storage_key"
        android:title="@string/pref_storage_title"
        android:summary="@string/pref_storage_summary"
		android:dialogTitle="@string/pref_storage_dialog_title"
		android:entries="@array/pref_storage_options"
		android:entryValues="@array/pref_storage_values"
		android:defaultValue="@string/pref_storage_default_value" 
		/>

	<Preference
		android:key="pref_static_field_information_key"
		android:selectable="false"
		android:persistent="false"
		android:title="Information"
		android:summary="@string/help" 
		/>
		
	<Preference android:title="@string/acorns_link" >
		<intent android:action="android.intent.action.VIEW"
            android:data="https://acornslinguistics.com" />
	</Preference>


		
		
	<Preference
		android:key="pref_static_field_policy_key"
		android:selectable="false"
		android:persistent="false"
		android:title="@string/policy"
		android:summary="@string/policy_description"/>
			
</PreferenceScreen>