<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_discard"
          android:icon="@drawable/ic_action_discard"
          app:showAsAction="ifRoom"
          android:title="@string/action_discard"/>

    <item
        android:id="@+id/action_settings"
        app:showAsAction="never"
        android:title="@string/action_settings"/>

    <item android:id="@+id/action_display"
          android:icon="@drawable/ic_action_picture"
          android:title="@string/action_display"
          app:showAsAction="ifRoom" />

    <item android:id="@+id/action_email"
          android:icon="@drawable/ic_action_email"
          android:title="@string/action_email"
          app:showAsAction="never" />

    <item android:id="@+id/action_web_site"
          android:icon="@drawable/ic_action_web_site"
          android:title="@string/action_web_site"
          app:showAsAction="never" />
</menu>
